# multispectral-plant-stress

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
demo/: README.md  app.py  export_saved_model.py  requirements.txt
docs/: architecture.md  data_pipeline.md  results.md
models/: README.md
notebooks/: README.md  colab_workspace_full.py
src/plant_stress/: __init__.py  calibration.py  config.py  evaluate.py  indices.py  predict.py  train.py
src/plant_stress/data/: __init__.py  dataset.py  label_licor.py
src/plant_stress/models/: __init__.py  temporal_bigru.py  two_stream_film.py
tools/: verify_checkpoint.py
